--- a/backend/login/src/main/resources/application.properties
+++ b/backend/login/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/login
+spring.datasource.username=root
+spring.datasource.password=kaiyang123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
